--- a/views/form.ejs
+++ b/views/form.ejs
@@ -13,20 +13,26 @@
 
     <title>Form Page</title>
     <script>
-        window.onload = function () {
-          // Get status and message from the server-rendered variables
-          const status = "<%= status || 'fail' %>";
-          const message = "<%= message || 'Welcome, something is wrong' %>";
+      window.onload = function () {
+        // Get status and message from the server-rendered variables
+        const status = "<%= status || 'fail' %>";
+        const message = "<%= message || 'Welcome, something is wrong' %>";
 
-          // Show alert with status and message
-          alert(`Status: ${status}\nMessage: ${message}`);
-
-           // Log submitted data to the browser console if it exists
-          const submittedData = <%- JSON.stringify(submittedData || {}) %>;
-          if (Object.keys(submittedData).length !== 0) { // Only log if there is data
-          console.log("Submitted Data:", submittedData);
-        }
+        // Show alert with status and message
+        alert(`Status: ${status}\nMessage: ${message}`);
       };
+
+      // Log submitted data to the browser console if it exists
+      const submittedDataStr =
+        `<%= JSON.stringify(submittedData) || {} %>`.trim();
+      let decodedStr = submittedDataStr
+        .replace(/&quot;/g, '"')
+        .replace(/&#34;/g, "'");
+      const submittedData = JSON.parse(decodedStr);
+      // if (Object.keys(submittedData).length !== 0) {
+      // Only log if there is data
+      console.log("Submitted Data:", submittedData);
+      // }
     </script>
   </head>
   <body>
